# tree-sitter-latte

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-latte.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_latte/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterLatte/: latte.h
bindings/swift/TreeSitterLatteTests/: TreeSitterLatteTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: comments.txt
